Fixing some forum bugs

--- a/forum/templates/forum/forum_view.html
+++ b/forum/templates/forum/forum_view.html
@@ -50,7 +50,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row panel panel-default">
+    <div class="panel panel-default">
         <div class="panel-body">
             <div class="comments-list">
                 <div class="section-heading forum_view">
