--- a/courses/templates/category/create.html
+++ b/courses/templates/category/create.html
@@ -37,6 +37,18 @@
 	        </ul>
 	    </div>
 	</div>
+
+	<div class="panel panel-primary navigation">
+	    <div class="panel-heading">
+	        <h3 class="panel-title">Category</h3>
+	    </div>
+	    <div class="panel-body">
+	        <ul class="nav nav-pills nav-stacked">
+	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+	            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
+	        </ul>
+	    </div>
+	</div>
 {% endif %}
 
 {% endblock %}
