--- a/courses/templates/category/index.html
+++ b/courses/templates/category/index.html
@@ -1,6 +1,8 @@
 {% extends 'app/base.html' %}
 
 {% load static i18n %}
+{% load static i18n permission_tags %}
+{% load widget_tweaks %}
 
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
@@ -10,14 +12,45 @@
 {% endblock %}
 
 {% block sidebar %}
-	<div class="list-group">
-	  	<a href="{% url 'course:manage_cat' %}" class="list-group-item active">
-	    	{% trans 'Categories' %}
-	  	</a>
-	  	<a href="{% url 'course:create_cat' %}" class="list-group-item">
-	    	{% trans 'Create Category' %}
-	  	</a>
+	<div class="panel panel-primary navigation">
+        <div class="panel-heading">
+            <h5>{% trans 'Menu' %}</h5>
+        </div>
+        <div class="panel-body">
+            <ul class="nav nav-pills nav-stacked">
+                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+                <li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
+            </ul>
+        </div>
+    </div>
+    
+	{% if user|has_role:'professor, system_admin' %}
+
+    <div class="panel panel-primary navigation">
+	    <div class="panel-heading">
+	        <h3 class="panel-title">Actions</h3>
+	    </div>
+	    <div class="panel-body">
+	        <ul class="nav nav-pills nav-stacked">
+	            <li><a href="javascript:void(0)">Replicate Course</a></li>
+	            <li><a href="{% url 'course:create' %}">Create Course</a></li>
+	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+	        </ul>
+	    </div>
 	</div>
+
+	<div class="panel panel-primary navigation">
+	    <div class="panel-heading">
+	        <h3 class="panel-title">Category</h3>
+	    </div>
+	    <div class="panel-body">
+	        <ul class="nav nav-pills nav-stacked">
+	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+	            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
+	        </ul>
+	    </div>
+	</div>
+{% endif %}
 {% endblock %}
 
 {% block content %}
