--- a/courses/templates/category/view.html
+++ b/courses/templates/category/view.html
@@ -1,6 +1,9 @@
 {% extends 'app/base.html' %}
 
+{% load static i18n permission_tags %}
+{% load widget_tweaks %}
 {% load static i18n %}
+
 
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
@@ -10,27 +13,57 @@
 {% endblock %}
 
 {% block sidebar %}
-	<div class="list-group">
-	  	<a href="{% url 'course:manage_cat' %}" class="list-group-item">
-	    	{% trans 'Categories' %}
-	  	</a>
-	  	<a href="{% url 'course:create_cat' %}" class="list-group-item">
-	    	{% trans 'Create Category' %}
-	  	</a>
-	  	<a href="" class="list-group-item">
-	    	{% trans 'Edit Category' %}
-	  	</a>
-	  	<a href="" class="list-group-item">
-	    	{% trans 'Remove Category' %}
-	  	</a>
-	</div>
+	<div class="panel panel-primary navigation">
+        <div class="panel-heading">
+            <h5>{% trans 'Menu' %}</h5>
+        </div>
+        <div class="panel-body">
+            <ul class="nav nav-pills nav-stacked">
+                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+                <li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
+            </ul>
+        </div>
+    </div>
+	{% if user|has_role:'professor, system_admin' %}
+
+	    <div class="panel panel-primary navigation">
+		    <div class="panel-heading">
+		        <h3 class="panel-title">Actions</h3>
+		    </div>
+		    <div class="panel-body">
+		        <ul class="nav nav-pills nav-stacked">
+		            <li><a href="javascript:void(0)">Replicate Course</a></li>
+		            <li><a href="{% url 'course:create' %}">Create Course</a></li>
+		            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+		        </ul>
+		    </div>
+		</div>
+
+		<div class="panel panel-primary navigation">
+		    <div class="panel-heading">
+		        <h3 class="panel-title">Category</h3>
+		    </div>
+		    <div class="panel-body">
+		        <ul class="nav nav-pills nav-stacked">
+		            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+		            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
+		            <li><a href="{% url 'course:delete_cat' category.slug %}">Remove Category</a></li>
+		            <li><a href="{% url 'course:update_cat' category.slug %}">Update Category</a></li>
+		        </ul>
+		    </div>
+		</div>
+	{% endif %}
 {% endblock %}
 
 {% block content %}
-	<div class="row">
-		<div class="col-sm-12">
-			<p><b>{% trans 'Name:' %} </b> {{ category }}</p>
-			<p><b>{% trans 'Slug:' %} </b> {{ category.slug }}</p>
+	<div class="card card-content">
+        <div class="card-body">
+			<div class="row">
+				<div class="col-sm-12">
+					<p><b>{% trans 'Name:' %} </b> {{ category }}</p>
+					<p><b>{% trans 'Slug:' %} </b> {{ category.slug }}</p>
+				</div>
+			</div>
 		</div>
 	</div>
 {% endblock %}
