--- a/courses/templates/category/delete.html
+++ b/courses/templates/category/delete.html
@@ -1,6 +1,7 @@
 {% extends 'app/base.html' %}
 
 {% load static i18n %}
+{% load static i18n permission_tags %}
 
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
@@ -10,21 +11,54 @@
 {% endblock %}
 
 {% block sidebar %}
-	<div class="list-group">
-	  	<a href="{% url 'course:manage_cat' %}" class="list-group-item active">
-	    	{% trans 'Categories' %}
-	  	</a>
-	  	<a href="{% url 'course:create_cat' %}" class="list-group-item">
-	    	{% trans 'Create Category' %}
-	  	</a>
+	<div class="panel panel-primary navigation">
+        <div class="panel-heading">
+            <h5>{% trans 'Menu' %}</h5>
+        </div>
+        <div class="panel-body">
+            <ul class="nav nav-pills nav-stacked">
+                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+                <li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
+            </ul>
+        </div>
+    </div>
+
+{% if user|has_role:'professor, system_admin' %}
+
+    <div class="panel panel-primary navigation">
+	    <div class="panel-heading">
+	        <h3 class="panel-title">Actions</h3>
+	    </div>
+	    <div class="panel-body">
+	        <ul class="nav nav-pills nav-stacked">
+	            <li><a href="javascript:void(0)">Replicate Course</a></li>
+	            <li><a href="{% url 'course:create' %}">Create Course</a></li>
+	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+	        </ul>
+	    </div>
 	</div>
+	<div class="panel panel-primary navigation">
+	    <div class="panel-heading">
+	        <h3 class="panel-title">Category</h3>
+	    </div>
+	    <div class="panel-body">
+	        <ul class="nav nav-pills nav-stacked">
+	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+	            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
+	        </ul>
+	    </div>
+	</div>
+{% endif %}
 {% endblock %}
 
 {% block content %}
-	<form action="" method="post">
-		{% csrf_token %}
-	    <p>{% trans 'Are you sure you want to delete the category' %} "{{ object }}"?</p>
-	    <input type="submit" class="btn btn-success btn-sm" value="{% trans 'Yes' %}" />
-	    <a href="{% url 'course:manage' %}" class="btn btn-danger btn-sm">{% trans 'No' %}</a>
-	</form>
+	<div class="card card-content">
+	    <div class="card-body">
+			<form action="" method="post">{% csrf_token %}
+		    	<h1>{% trans 'Are you sure you want to delete the category' %} "{{ object }}"?</h1>
+			    <input type="submit" class="btn btn-success btn-sm" value="{% trans 'Yes' %}" />
+			    <a href="{% url 'course:manage_cat' %}" class="btn btn-danger btn-sm">{% trans 'No' %}</a>
+			</form>
+		</div>
+	</div>
 {% endblock %}
