--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -15,9 +15,11 @@
       </div>
       <div class="col-xs-3 col-md-2 divMoreActions">
         <div class="btn-group">
-          <button type="button" class="btn btn-default btn-sm eye" data-toggle="tooltip" data-placement="bottom" title="Visible">
+          <a href="{% url 'course:view_topic' topic.slug %}">
+            <button type="button" class="btn btn-default btn-sm eye" data-toggle="tooltip" data-placement="bottom" title="Visible">
             <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
-          </button>
+            </button>
+          </a>
         </div>
         <div class="btn-group">
           <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
