--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -66,40 +66,32 @@
 	{% endif %}
 
 <div class="col-md-12">
-	<div class="input-group">
-	  <div class="form-group is-empty"><input type="search" class="form-control" placeholder="Search Courses"></div>
-	    <span class="input-group-btn input-group-sm">
-	      <button type="button" class="btn btn-fab btn-fab-mini">
-	        <i class="material-icons">search</i>
-	      </button>
-	    </span>
-	</div>
+	<form id="searchform" action="{% url 'course:manage' %}" method="get" accept-charset="utf-8">
+		<div class="input-group">
+		  <div class="form-group is-empty">
+		  <input type="search" class="form-control" placeholder="Search Courses" name="q" id="searchbox"></div>
+		    <span class="input-group-btn input-group-sm">
+		      <button type="button" class="btn btn-fab btn-fab-mini">
+		        <i class="material-icons">search</i>
+		      </button>
+		    </span>
+		</div>	
+	</form>
 </div>
 	<div class="col-md-12">
-		{% if user|has_role:'professor, system_admin' %}
-			<div class="btn-group btn-group-justified btn-group-raised">
-				<a href="?category=all" class="btn btn-raised btn-info">Todos</a>
-				{% for category_course in categorys_courses_professor %}
-					<a href="?category={{category_course.name}}" class="btn btn-raised btn-primary">{{category_course.name}}</a>
-				{% endfor %}
-			</div>
-		{% else%}
-			<div class="btn-group btn-group-justified btn-group-raised">
-				<a href="?category=all" class="btn btn-raised btn-info">Todos</a>
-				{% for category_course in categorys_courses %}
-					<a href="?category={{category_course.name}}" class="btn btn-raised btn-primary">{{category_course.name}}</a>
-				{% endfor %}
-			</div>
-		{% endif %}
+		<div class="btn-group btn-group-justified btn-group-raised">
+			<a href="?category=all" class="btn btn-raised btn-info">Todos</a>
+			{% for category_course in categorys_courses %}
+				<a href="?category={{category_course.name}}" class="btn btn-raised btn-primary">{{category_course.name}}</a>
+			{% endfor %}
+		</div>
 	</div>
 
 </fieldset>
-{% if user|has_role:'professor, system_admin' %}
 	<div class="col-md-12">
 		{% if courses|length > 0 %}
 			{% if request.GET.category == 'all' or none or request.GET.category == '' %}
-				{% for course in courses_teacher %}
-				  <!-- Put your content here! -->
+				{% for course in list_courses %}
 		          <div class="panel-group ui-accordion ui-widget ui-helper-reset ui-sortable" id="accordion" role="tablist" aria-multiselectable="false">
 		            <div class="group">
 						<div class="panel panel-info">
@@ -111,12 +103,6 @@
 						          </a>
 						        </div>
 						        <div class="col-xs-4 col-md-3" id="divMoreActions">
-						            <div class="btn-group">
-						              <button type="button" class="btn btn-default btn-sm eye" data-toggle="tooltip" data-placement="bottom" title="Visible">
-						                <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
-						              </button>
-
-						            </div>
 						            <div class="btn-group">
 						              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
@@ -148,7 +134,7 @@
 				</div>
 				{% endfor %}
 			{% else %}
-				{% for course in courses_teacher %}
+				{% for course in courses_category %}
     				{% if course.category.name == request.GET.category %}
     					<!-- Put your content here! -->
 		          <div class="panel-group ui-accordion ui-widget ui-helper-reset ui-sortable" id="accordion" role="tablist" aria-multiselectable="false">
@@ -221,125 +207,28 @@
 				      </div>
 				    </div>
 				  </div>
-				</div>
 			</div>
 		</div>
-{% else %}
-	{% if courses|length > 0 %}
-		{% if request.GET.category == 'all' or none or request.GET.category == '' %}
-			{% for course in courses_student %}
-				<div class="col-md-12">
-				    <div class="panel panel-info">
-				    <!--{% if course.image %}
-		  				<img src="{{ course.image_url }}" class="img-responsive" />
-		            {% else %}
-		            	<img src="" class="img-responsive" />
-		            {% endif %} -->
-					  <div class="panel-heading">
-						  <div class="row">
-						  	<div class="col-md-9">
-					  			<h3 class="panel-title">{{course.name}}</h3>
-					  		</div>
-					  		<div class="col-md-3">
-					  			<span class="label label-info">{{ course.category }}</span>
-								<span class="label label-warning">{{ course.max_students }} {% trans 'students tops' %}</span>
-					  		</div>
-						  </div>
-					  </div>     
-					  <div class="panel-body">
-					    <p><b>Course Name: </b>{{ course.name }}</p>
-					    <p><b>Duration (in semesters): </b>09</p>
-					    <p><b>Coordinator: </b>{{course.professors}}</p>
-					    <p>
-					      <b>Description:</b>
-					      <i>
-					      {% if couse.description %}
-					        {{course.description|linebreaks}}
-					      {% else %}
-					      	{% trans 'No description' %}
-					      {% endif %}
-					      </i>
-					    </p>
-
-					    <!--{% if user|has_role:'professor, system_admin' %}
-							<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
-								<span class="glyphicon glyphicon-edit"></span>
-							</a>
-							<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
-								<span class="glyphicon glyphicon-trash"></span>
-							</a>
-						{% endif %}-->
-
-					    <a href="{% url 'course:view' course.slug %}" class="btn btn-raised btn-default center-block">View Course</a>
-					  </div>
-					</div>            
-	    		</div>
-    		{% endfor %}
-    	{% else %}
-    		{% for course in courses_student %}
-    			{% if course.category.name == request.GET.category %}
-    				<div class="col-md-12">
-					    <div class="panel panel-info">
-					    <!--{% if course.image %}
-			  				<img src="{{ course.image_url }}" class="img-responsive" />
-			            {% else %}
-			            	<img src="" class="img-responsive" />
-			            {% endif %} -->
-						  <div class="panel-heading">
-							  <div class="row">
-							  	<div class="col-md-9">
-						  			<h3 class="panel-title">{{course.name}}</h3>
-						  		</div>
-						  		<div class="col-md-3">
-						  			<span class="label label-info">{{ course.category }}</span>
-									<span class="label label-warning">{{ course.max_students }} {% trans 'students tops' %}</span>
-						  		</div>
-							  </div>
-						  </div>     
-						  <div class="panel-body">
-						    <p><b>Course Name: </b>{{ course.name }}</p>
-						    <p><b>Duration (in semesters): </b>09</p>
-						    <p><b>Coordinator: </b>{{course.professors}}</p>
-						    <p>
-						      <b>Description:</b>
-						      <i>
-						      {% if couse.description %}
-						        {{course.description|linebreaks}}
-						      {% else %}
-						      	{% trans 'No description' %}
-						      {% endif %}
-						      </i>
-						    </p>
-
-						    <!--{% if user|has_role:'professor, system_admin' %}
-								<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
-									<span class="glyphicon glyphicon-edit"></span>
-								</a>
-								<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
-									<span class="glyphicon glyphicon-trash"></span>
-								</a>
-							{% endif %}-->
-
-						    <a href="{% url 'course:view' course.slug %}" class="btn btn-raised btn-default center-block">View Course</a>
-						  </div>
-						</div>            
-	    			</div>
+	</div>
+	<div class="col-md-12">
+		<nav aria-label="Page navigation">
+			<ul class="pagination">
+				{% if page_obj.has_previous %}
+				    <li>
+				        <a href="?page={{ page_obj.previous_page_number }}"><span><<</span></a>
+				    </li>
 				{% endif %}
-    		{% endfor %}
-    	{% endif %}
-
-    	<nav aria-label="Page navigation">
-  			<ul class="pagination">
-    			{% for page_number in paginator.page_range %}
-    				<li{% if page_obj.number == page_number %} class="active"{% endif %}>
-        				<a href="?page={{ page_number }}">{{ page_number }}</a>
-    				</li>
-    			{% endfor %}
-  			</ul>
+			    {% for page_number in paginator.page_range %}
+					<li{% if page_obj.number == page_number %} class="active"{% endif %}>
+	    				<a href="?page={{ page_number }}">{{ page_number }}</a>
+					</li>
+				{% endfor %}
+				{% if page_obj.has_next %}
+				    <li>
+				        <a href="?page={{ page_obj.next_page_number }}"><span>>></span></a>
+				    </li>
+				{% endif %}
+			</ul>
 		</nav>
-	{% else %}
-		{% trans 'No courses found' %}
-	{% endif %}
-{% endif %}
-
+	</div>
 {% endblock %}
