--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -115,6 +115,7 @@
 		</div>
 	</div>
 	<script src="{% static 'js/main.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/topic_editation_presentation.js' %}"></script>
 </body>
 
 </html>
