--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -21,6 +21,7 @@
         </div>
         <div class="panel-body">
             <ul class="nav nav-pills nav-stacked">
+                <li><a href="{% url 'core:home' %}">{% trans "Home" %}</a></li>
                 <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
                 <li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
             </ul>
