modified notifications items on home

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -296,26 +296,24 @@ body .container .jumbotron-inverse, body .container .well-inverse, body .contain
     color: #000;
 }
 
-.timeline.post {
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    padding-bottom: 0px;
-    -webkit-padding-start: 0px !important;
+/*TIMELINE CLASSES BEGIN */
+.resource_inline{
+    display: inline-block;
+}
+
+.imgTimeLine{
     width: 100%;
+    height: auto;
+    padding-top: 10px;
 }
-.timeline.post a {
-    color: #000;
+.timeLine div .col-md-11{
+    padding-left: 0px;
 }
-.timeline.post li {
-    padding: 10px;
-    border-bottom: 1px solid #fff;
+.timeLine div .col-md-11 i{
+    padding-right: 5px;
 }
-.timeline.post li:last-child {
-    border: none;
-}
-.timeline.post h3 {
-    margin-top: 5px;
-}
+
+/*TIMELINE CLASSES END*/
 
 .notification-count {
     background-color: #FF0000;
