--- a/app/templates/home_teacher_student_content.html
+++ b/app/templates/home_teacher_student_content.html
@@ -17,7 +17,7 @@
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
             <a href=""><h4 class="resource_inline"><b>{{ notification.user }}</b></h4></a>
             <p class="resource_inline">{{notification.message}} em : <a href="{% url 'core:notification_read' notification.id  %}">Recurso</a></p>
-            <p class="timePost"><i>{{ notification.datetime }}</i></p>
+            <p class="timePost"><i> {{ notification.datetime|timesince }} {% trans "ago" %}  </i></p>
         </div>
     </div>
 </div>
