add subject was showing for students , fixed

--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -56,7 +56,7 @@
           <div class="col-xs-8 col-md-10 titleTopic">
             <h4>{{course}}</h4>
           </div>
-          {% if user|has_role:'professor, system_admin' %}
+          {% if user|has_role:'professor' or user|has_role:'system_admin' %}
             <div class="col-xs-4 col-md-2" id="divMoreActions">
               <div class="btn-group">
                 <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -225,9 +225,13 @@
         <a href="{% url 'course:view_subject' subject.slug %}" class="btn btn-raised btn-default center-block">{% trans 'View Subject' %}<div class="ripple-container"></div></a>
     </div>
 </div>
-<div class="form-group">
-  <a href="{% url 'course:create_subject' subject.slug %}" data-toggle="modal" data-target="" class="btn btn-primary btn-lg btn-block btn-raised">{% trans 'Create Subject' %}<div class="ripple-container"></div></a>
-</div>
+{% if  user|has_role:'professor' or user|has_role:'system_admin' %}
+  
+    <div class="form-group">
+    <a href="{% url 'course:create_subject' subject.slug %}" data-toggle="modal" data-target="" class="btn btn-primary btn-lg btn-block btn-raised">{% trans 'Create Subject' %}<div class="ripple-container"></div></a>
+  </div>
+{% endif %}
+
 
 {% endfor %}
 
