Add timesince in forum post

--- a/forum/templates/post/post_list.html
+++ b/forum/templates/post/post_list.html
@@ -27,7 +27,7 @@
                 <div class="post_content">
                     <div class="card-data">
                         <p class="comment-date">
-                            <i class="fa fa-clock-o"></i> {{ post.post_date }}
+                            <i class="fa fa-clock-o"></i> {{ post.post_date|timesince }} {% trans 'ago' %}
                             {% if post.is_modified %}
                                 <em> - {% trans 'Edited' %}</em>
                             {% endif %}
