Fixing some details [Issue: #120]

--- a/links/templates/links/create_link.html
+++ b/links/templates/links/create_link.html
@@ -21,7 +21,7 @@
           <textarea class="form-control" rows="3"></textarea>
         </div>
         <div class="form-group">
-          <a href="javascript:void(0)" class="btn btn-raised btn-default">Cancel</a>
+          <a href="javascript:void(0)" class="btn btn-raised btn-default" data-dismiss="modal">Cancel</a>
           <a href="javascript:void(0)" class="btn btn-raised btn-primary">Submit</a>
       </div>
         <!-- .end Card -->
