Fixing some details [Issue: #121]

--- a/links/templates/links/delete_link.html
+++ b/links/templates/links/delete_link.html
@@ -10,8 +10,9 @@
         <p>Do you really want to delete this link?</p>
       </div>
       <div class="modal-footer">
-
-        <a href="#" target="_self"><button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Confirm</button></a>
+        <!--  -->
+        <button type="button" class="btn btn-primary btn-default" data-dismiss="modal">Cancel</button>
+        <a href="http://www.google.com" target="_self"><button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Confirm</button></a>
 
       </div>
     </div>
